# dbt_unit_testing

./: Makefile  README.md  dbt_project.yml  pyproject.toml
duckdb/: main.py
duckdb/inputs/: personnes.csv  voitures.csv
models/base/: src_personnes.sql  src_voitures.sql
models/mart/: dim_voitures_toyota.sql  dim_voitures_toyota.yml
models/sources/: sources.yml
tests/fixtures/inputs/: bronze_personnes_emails.csv  bronze_personnes_experience.csv
tests/fixtures/outputs/: silver_personnes_emails.csv  silver_personnes_experience.csv
tests/unit/: test_src_personnes.yml
