[project]
name = "dbt-unit-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt>=1.0.0.38.25",
    "dbt-core>=1.9.2",
    "dbt-duckdb>=1.9.1",
    "duckdb>=1.1.3",
    "pathlib>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
